# session-saver

./: README.md  addon.py  driver.py  open_browser_with_proxy_settings.py  pyproject.toml
