[tool.poetry]
name = "session-saver"
version = "0.1.0"
description = ""
authors = ["Job Evers"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mitmproxy = "^11.0.0"
selenium = "^4.25.0"
typing-extensions = "^4.12.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120
